--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,6 @@
-footer {
+.footer {
   background: #efefef;
   border-top: 1px solid grey;
-  /* position: fixed; */
-  /* bottom: 0; */
   min-width: 100vw;
   height: 50px;
   display: flex;
