--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,9 +1,9 @@
-main {
+.main {
   background: #eee;
   margin: 1rem;
   border-radius: 0.5rem;
   min-height: 100vh;
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 .img-container {
@@ -13,15 +13,23 @@ main {
   border-radius: 5px;
 }
 
-img {
-  border-radius: 0.5rem;
+.hero-img {
   max-width: 100%;
   display: block;
   height: auto;
   margin: 0 auto;
+  border-radius: 4px;
 }
 
 .fig-caption {
   font-weight: bolder;
   font-size: 1.5rem;
+}
+
+.reference-link {
+  text-decoration: none;
+}
+
+.reference-link:visited {
+  color: #74638f;
 }
