--- a/src/Components/Main/Timelines/Timelines.css
+++ b/src/Components/Main/Timelines/Timelines.css
@@ -1,13 +1,23 @@
-ul {
-  list-style-type: none;
-  max-width: 550px;
+.timeline-title {
+  font-size: 1.5rem;
+  margin: 0.5rem auto;
+}
+
+.timeline__ul {
+  max-width: 650px;
   margin: 0 auto 50px auto;
   text-align: left;
   line-height: 1.6;
   font-size: 1.3rem;
 }
 
-li {
-  border: none;
+.timeline__li {
+  margin-bottom: 5px;
+}
+
+.timeline__li:hover {
+  background-color: rgb(177, 197, 194);
   border-radius: 5px;
+  padding: 5px;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
